# target

./: CMakeLists.txt
src/: AppLoader.cpp  AppLoader.hpp  main.cpp
src/adapter/: ActionDispatcher.cpp  ActionDispatcher.hpp  QueryController.cpp  QueryController.hpp  RenderNode.hpp  Renderer.cpp  Renderer.hpp
src/core/execution/: Action.hpp  ActionContext.hpp  ActionRegistry.cpp  ActionRegistry.hpp  CommandInstance.hpp  CommandResolver.cpp  CommandResolver.hpp  CommandResult.hpp  ExecutionEngine.cpp  ExecutionEngine.hpp
src/core/extensibility/: CommandData.hpp  CommandDescriptor.hpp  ExtensionData.hpp  ExtensionDescriptor.hpp  ExtensionDiscovery.cpp  ExtensionDiscovery.hpp  ExtensionRegistry.cpp  ExtensionRegistry.hpp  ManifestLoader.cpp  ManifestLoader.hpp
src/core/loaders/: CommandLoader.cpp  CommandLoader.hpp
src/core/lua/: LuaContextFactory.cpp  LuaContextFactory.hpp  LuaRunner.cpp  LuaRunner.hpp
src/core/lua/internal/: CompiledChunk.hpp  LuaProxies.hpp  LuaVUIMapper.cpp  LuaVUIMapper.hpp
src/core/navigation/: NavigationStack.cpp  NavigationStack.hpp
src/core/types/: ActionID.hpp  CommandID.hpp  Result.hpp
src/core/vui/: VUIComposer.cpp  VUIComposer.hpp  VUINode.hpp  VUITree.hpp
src/services/: CommandService.cpp  CommandService.hpp  IService.hpp
src/setup/: StyleSetup.cpp  StyleSetup.hpp  SystemSetup.cpp  SystemSetup.hpp
src/setup/internals/: LayerShellConfigurator.cpp  LayerShellConfigurator.hpp
ui/qml/: Main.qml
ui/qml/components/: List.qml  ListItem.qml  SearchBar.qml  Section.qml
ui/qml/theme/: Theme.qml
ui/qml/views/: RootView.qml
